--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.2.5
 Django==3.0.4
+django-braces==1.14.0
+django-chunked-upload==2.0.0
 django-crispy-forms==1.9.0
 django-login-required-middleware==0.5.0
 pytz==2019.3
+six==1.14.0
 sqlparse==0.3.1
